--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{https://github.com/zhendow/zhendow.github.io/blob/aa35cf2da0594f047ed8e3135a9e1c14af400879/resources/CV_full_12:08:22.pdf?raw=true}}">View My Complete CV</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
