--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="https://github.com/zhendow/zhendow.github.io/blob/main/resources/CV_full.pdf">View My Complete CV</a></p>
+        <p class="view"><a href="https://zhendow.github.io/resources/CV_full.pdf">View My Complete CV</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
