--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <link rel="stylesheet" type="text/css" href="academicons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +29,13 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="https://zhendow.github.io/resources/CV_full.pdf">View My Complete CV</a></p>
+        <p class="view">
+          <i class="ai ai-google-scholar"></i>
+          <i class="ai ai-researchgate"></i>
+          <a href="https://zhendow.github.io/resources/CV_full.pdf">
+            <i class="ai ai-cv"></i>
+          </a>
+        </p>
         {% endif %}
 
         {% if site.show_downloads %}
