Update links to icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,14 @@
 
         {% if site.github.is_user_page %}
         <p class="view">
-          <i class="ai ai-google-scholar-square ai-3x"></i>
-          <i class="ai ai-researchgate-square ai-3x"></i>
+          <a href="https://scholar.google.com/citations?user=b1v9zjYAAAAJ">
+            <i class="ai ai-google-scholar ai-3x"></i>
+          </a>
+          <a href="https://www.researchgate.net/profile/Zhendong-Wang-10">
+            <i class="ai ai-researchgate ai-3x"></i>
+          </a>
           <a href="https://zhendow.github.io/resources/CV_full.pdf">
-            <i class="ai ai-cv-square ai-3x"></i>
+            <i class="ai ai-cv ai-3x"></i>
           </a>
         </p>
         {% endif %}
